--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Skeleton</string>
-    <string name="btn_hello_txt">Hello</string>
+    <string name="btn_hello_txt">Login</string>
+    <string name="perform_task">perform task</string>
+    <string name="logout">logout</string>
 </resources>
